# colab-mcp

./: pyproject.toml
src/colab_mcp/: __init__.py  client.py  client_test.py  session.py  websocket_server.py
tests/: session_test.py  websocket_server_test.py
