[project]
name = "colab-mcp"
version = "0.1.0"
description = "An MCP server for Colab"
readme = "README.md"
authors = [
    { name = "Tyler Pirtle", email = "rtp@google.com" },
    { name = "Josie Cuff", email = "josiecuff@google.com" },
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.5",
    "fastmcp>=2.2.0,<3.0.0",
    "mcp[cli]>=1.20.0",
    "pydantic>=2.12.3,<3.0.0",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "requests-oauth2client>=0.4.0",
    "google-auth-oauthlib>=0.7.0",
    "jupyter-kernel-client>=0.9.0",
]

[project.scripts]
colab-mcp = "colab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "fastmcp>=2.2.0",
    "jupyter-kernel-client",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
commit = [
    "pre-commit>=4.3.0",
]

# For local development with the jupyter-kernel-client, uncomment this
# [tool.uv.sources]
# jupyter-kernel-client = { path = "../jupyter-kernel-client", editable = true }


[[tool.uv.index]]
url = "https://pypi.org/simple"
